--- a/testweb/Capstone/Clients.html
+++ b/testweb/Capstone/Clients.html
@@ -214,7 +214,7 @@
         
         <div class="nav-links">
             <button onclick="window.location.href='Clients.html'">📊 Dashboard</button>
-            <button onclick="window.location.href='jobposting.html'">📝 Post Job</button>
+            <button onclick="window.location.href='Jobposting.html'">📝 Post Job</button>
         </div>
 
         <div class="logout-container">
