--- a/testweb/Capstone/Jobposting.html
+++ b/testweb/Capstone/Jobposting.html
@@ -177,9 +177,9 @@
         </div>
 
         <div class="nav-links">
-            <button onclick="window.location.href='home.html'">🏠 Home</button>
+            <button onclick="window.location.href='Home.html'">🏠 Home</button>
             <button onclick="window.location.href='Clients.html'">📊 Dashboard</button>
-            <button onclick="window.location.href='jobposting.html'">📝 Post Job</button>
+            <button onclick="window.location.href='Jobposting.html'">📝 Post Job</button>
         </div>
 
         <div class="logout-container">
