--- a/testweb/Capstone/Dashboard.html
+++ b/testweb/Capstone/Dashboard.html
@@ -175,7 +175,7 @@
         </div>
         
         <div class="nav-links">
-            <button onclick="window.location.href='home.html'">🏠 Home</button>
+            <button onclick="window.location.href='Home.html'">🏠 Home</button>
             <button onclick="window.location.href='Settings.html'">⚙️ Settings</button> <!-- New Settings Button -->
         </div>
 
