--- a/index.html
+++ b/index.html
@@ -22,6 +22,91 @@
       </div>
       <ul class="nav__links" id="nav-links">
         <li><a href="index.html">Home</a></li>
+        <li><a href="#" id="developer-btn">Developers</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+      </ul>
+      <div class="nav__btns">
+        
+      </div>
+    </nav>
+    <header class="header__container">
+      <div class="header__image">
+        <div class="header__image__card header__image__card-1">
+          <span><i class="ri-key-line"></i></span>
+          Front End
+        </div>
+        <div class="header__image__card header__image__card-2">
+          <span><i class="ri-passport-line"></i></span>
+          Back End
+        </div>
+        <div class="header__image__card header__image__card-3">
+          <span><i class="ri-map-2-line"></i></span>
+          Rush Project
+        </div>
+        <div class="header__image__card header__image__card-4">
+          <span><i class="ri-guide-line"></i></span>
+          Full-Stack
+        </div>
+        <img src="assets/Tech2.png" alt="header" />
+      </div>
+      <div class="header__content">
+        <h1>LET'S GO!<br />LET YOUR <span>CREATIVITY</span> COMES TO LIFE</h1>
+        <p>
+          "Looking for a skilled and reliable developer to bring your ideas to life? We specialize in creating efficient, user-friendly, and high-performing websites and applications tailored to your needs. With expertise in Front end, Back end, and Full-stack Development We ensure clean code, seamless functionality, and a responsive design. Whether you're a startup, a business, or an individual looking for a custom solution, We are here to turn your vision into reality. Let’s build something amazing together—contact us today!"
+        </p>
+        <form action="/">
+          <div class="input__row">
+            <div class="input__group">
+              <h5>Project</h5>
+              <div>
+                <span><i class="ri-map-pin-line"></i></span>
+                <input type="text" placeholder="Website" />
+              </div>
+            </div>
+            <div class="input__group">
+              <h5>Developer</h5>
+              <div>
+                <span><i class="ri-calendar-2-line"></i></span>
+                <input type="text" placeholder="Full-stack" />
+              </div>
+            </div>
+          </div>
+          <button type="submit">Search</button>
+        </form>
+        <div class="bar">
+          Stay Creative!
+        </div>
+      </div>
+    </header>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="main.js"></script>
+  </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Creative Coder</title>
+  </head>
+  <body>
+    <nav>
+      <div class="nav__header">
+        <div class="nav__logo">
+          <a href="#">Creative<span>Coder</span>.</a>
+        </div>
+        <div class="nav__menu__btn" id="menu-btn">
+          <span><i class="ri-menu-line"></i></span>
+        </div>
+      </div>
+      <ul class="nav__links" id="nav-links">
+        <li><a href="index.html">Home</a></li>
         <li><a href="Dev.html">Developers</a></li>
         <li><a href="#">About Us</a></li>
         <li><a href="#">Contact</a></li>
