--- a/testweb/Portfolio.html
+++ b/testweb/Portfolio.html
@@ -255,7 +255,7 @@ nav ul li a.active::after {
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Service</a></li>
                 <li><a href="Portfolio.html"class="active">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
