--- a/testweb/about.html
+++ b/testweb/about.html
@@ -18,7 +18,7 @@
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="services.html">Service</a></li>
                 <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
